Restructuring and colours for objects